# MuMain

./: CMakeLists.txt  CMakePresets.json  rebuild-v097-nativeaot.ps1  rebuild-v097-nativeaot.sh
ClientLibrary/: ConnectionManager.cs
build-mingw-s6/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mingw-s6/src/: cmake_install.cmake
build-mingw-v097/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mingw-v097/src/: MUnique.Client.Library.deps.json  cmake_install.cmake
src/: CMakeLists.txt
src/source/: CSItemOption.cpp  WSclient.cpp  WSclient.h  stb_vorbis_impl.c  wzAudio_impl.cpp  wzAudio_stubs.cpp
src/source/Dotnet/: Connection.cpp
